2025-10-17  Zhengyi Fu  <i@fuzy.me>

	Set correct type of warning

	* site-lisp/tui/fuzzy-finder.el (fuzzy-finder-default-class):
	Change type of the warning to `fuzzy-finder'.

2025-10-14  Zhengyi Fu  <i@fuzy.me>

	* init.el (elisp-fontify-semantically): Set to t.

2025-10-13  Zhengyi Fu  <i@fuzy.me>

	Remove semel

	* init.el (dotemacs-theme-refresh): Remove configuration of semel.
	* packages.el: Remove semel.

2025-10-10  Zhengyi Fu  <i@fuzy.me>

	* init.el (dotemacs-theme-refresh): Use `modus-themes-get-current-theme'.

2025-09-29  Zhengyi Fu  <i@fuzy.me>

	Style change on message-ring

	* init.el (message-insert-ring): Use named-let.
	(message-ring): Increase size to 128.

2025-09-29  Zhengyi Fu  <i@fuzy.me>

	Make `tramp-persistency-file-name' unreadable by other users

	* init.el (tramp-dump-connection-properties): Change permission of
	`tramp-persistency-file-name' to 0600.

2025-09-28  Zhengyi Fu  <i@fuzy.me>

	Enable orderless style and move to minibuffer for Corfu

	* init.el (corfu-map): Bind M-m to `corfu-move-to-minibuffer'.
	Bind SPC to `corfu-insert-separator'.
	* init.el (corfu-move-to-minibuffer): New command.  Bind M-m in
	`corfu-map' to it.

2025-09-28  Zhengyi Fu  <i@fuzy.me>

	Prefer using `seq' and `named-let'

	* site-lisp/dotemacs-core.el (dotemacs--major-mode-completion-table)
	(enable-minor-mode-in-project): Prefer using `seq' and `named-let'.

2025-09-28  Zhengyi Fu  <i@fuzy.me>

	* init.el: Use `require' to load `modus-themes'.

2025-09-28  Zhengyi Fu  <i@fuzy.me>

	Fix macro expansion probmlem in `modus-themes-with-colors'

	* init.el (modus-themes-with-colors): Add a workaround for the bug
	introduced when fixing bug#79504.

2025-09-27  Zhengyi Fu  <i@fuzy.me>

	Add configuration for verilog

	* init.el (+verilog-mode-setup): New function. Added to `verilog-mode-hook'.
	* site-lisp/flymake-verilator.el (flymake-verilator): Fix.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Remove some settings in early-init.el
